amdgpu hangs in amdgpu_device_get_job_timeout_settings during boot with 5.14 but not 5.14-rc6 (6800 XT)
I was running 5.14-rc6 and that worked fine. When I upgraded to 5.14.0 from https://kernel.ubuntu.com/~kernel-ppa/mainline/v5.14/ I got the following. Happens 100% of the time so far, 3 boots. Ryzen 1700 X, 6800 XT.
RIP: 0010:amdgpu_discovery_reg_base_init+0x225/0x260 [amdgpu]
Code: 0f 85 d4 fe ff ff 48 83 45 c0 01 48 8b 45 c0 39 45 c8 0f 8f 55 fe ff ff 8b 45 b4 48 8d 65 d8 5b 41 5c 41 5d 41 5e 41 5f 5d c3 <0f> 0b 48 c7 c7 ac fa 19 c1 e8 ed 36 98 ff eb de 41 89 d0 48 c7 c7
RSP: 0018:ffffaa548175f970 EFLAGS: 00010202
RAX: 0000000000000008 RBX: ffff91a1493c5128 RCX: 0000000000000006
RDX: ffffffffc119fb31 RSI: ffffffffc114a3f0 RDI: 0000000000000000
RBP: ffffaa548175f9c0 R08: 0000000000000008 R09: 000000000000000b
R10: ffff91a1493c5120 R11: 0000000000000000 R12: ffff91a1482a0000
R13: 0000000000000019 R14: 0000000000000019 R15: ffff91a1493c5120
FS: 00007fe3aeaaa8c0(0000) GS:ffff91a83ea40000(0000) knlGS:0000000000000000
CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
CR2: 00007f20ee3e46a0 CR3: 000000010aafc000 CR4: 00000000003506e0
Call Trace:
nv_set_ip_blocks+0x8e/0xab0 [amdgpu]
amdgpu_device_ip_early_init+0x2b1/0x47f [amdgpu]
? amdgpu_device_get_job_timeout_settings+0x90/0x1cc [amdgpu]
amdgpu_device_init.cold+0xc9/0x6d1 [amdgpu]
amdgpu_driver_load_kms+0x6d/0x310 [amdgpu]
amdgpu_pci_probe+0x11b/0x1a0 [amdgpu]
local_pci_probe+0x45/0x80
Edited by Ernst Persson